--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
 jupyter_client==8.6.3
-jupyter_core==5.8.1
+jupyter_core==5.8.3
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
@@ -37,6 +37,7 @@ Pygments==2.19.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.0.0
+scikit-learn
 six==1.17.0
 stack-data==0.6.3
 tornado==6.5.1
