--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
 pytz==2025.2
 pyzmq==27.0.0
 scikit-learn
