--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+# --- Core Web Framework ---
 Flask==3.1.1
-flask-cors==6.0.1
+Flask-Cors==4.0.1
 gunicorn==23.0.0
+
+# --- Database & ORM ---
 psycopg2-binary==2.9.10
-python-dotenv==1.0.0
+SQLAlchemy==2.0.23
+
+# --- Environment & Configuration ---
+python-dotenv==1.0.1
+requests==2.32.3
+
+# --- Authentication ---
+clerk-backend-api==3.3.0
 PyJWT==2.10.1
+
+# --- Caching & Performance ---
 Flask-Caching==2.3.0
 redis==5.0.8
-sqlalchemy==2.0.23
-clerk-backend-api==3.3.0
-requests==2.32.5
 
-APScheduler==3.10.1
+# --- Scheduler / Background Tasks ---
+APScheduler==3.10.4
+
+# --- Machine Learning / Data Processing ---
+pandas==2.2.3
+numpy==2.1.3
+scikit-learn==1.5.2
